w06 assign (3)
