# routes/index.js
@@ -2,7 +2,7 @@ const express = require('express');
 const router = express.Router();
 
 router.use('/', require('./swagger'));
-router.use('/character', require('./characters'));
+router.use('/characters', require('./characters'));
 router.use('/weapons', require('./weapons'));
 
 
